# Cheatsheets

./: .gitignore  Pipfile  distributed_systems.md  myJ.json  new.json  plan_and_progress.txt  pyproject.toml  whatever.json
API/: api_versioning.md  misc.md
AWS/: misc.md
Architecture_Patterns_with_Python_Enabling_Test_Driven_Development/: 01_Domain_modeling.txt  chapters_short_summary.md
CleanCode/: clean_code_principles.md
Computer Science/: big_o.md  bit flags.md  bit flags.py  compiled_vs_interpreted.md  hashing function.md  how_to_sort_huge_file_with_random_numbers.md  make list of random numbers that doesn't fit into memory.md  misc.md  multitasking.md  orm.md  passing_arguments_by.md  salt.md  trees.md  variance.md
Designing Data-Intensive Applications/: chapter1.md  chapter3.md
Django/: miscellaneous.md
Git/: cheat_list.txt  cheatsheet.md
Google Cloud/: q and a.md
JWT/: access and refresh tokens.md  jwt.md
Job interview questions/: Python Backend Junior job interview questions.txt
Redis/: install within docker.txt  pythoh-aioredis.md  python_redis.txt  redis-cheatsheet.md  redis_cheatsheet.txt  redis_data_types.txt
Rest/: rest_methods.md
SQLAlchemy/: SQLAlchemy.txt
aio_pika/: misc.md
alembic/: alembic_cheatsheet  alembic_cheatsheet.md
anaconda3/: cheatsheet
databases/: databases.md  levels_of_transaction_isolation.md  normalization.md  relational_vs_non_relational.md
design_patterns/: cqrs.md  dependency_injection.md  misc.md  repository_pattern.md  unit_of_work.md
django orm/: cheatsheet.txt
docker/: docker_cheatsheet.md  docker_cheatsheet.txt  docker_compose_commands_cheatsheet.md  docker_compose_file_cheatsheet.md  docker_network.md  docker_network.txt  dockerfile_cheatsheet.md
docker/docker_course/fastapi_docker/: Dockerfile  pyproject.toml
dynamic_programming/: big_o.md  draft.py  fib.md
fish/: fish_cheatlist.md
gcp_logs/: misc.md
golang/: main.go  (+4 more)
(+262 files in other folders)
