[tool.poetry]
name = "cheatsheets"
version = "0.1.0"
description = "Just my cheatsheets of different stuff like Python, git, pandas, Linux etc"
authors = ["RandyRomero <a.ya.miheev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
xlrd = "^1.2.0"
aiohttp = "^3.7.3"
mypy = "^0.812"
asyncpg = "^0.22.0"
aio-pika = "^6.8.0"
black = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
