[tool.poetry]
name = "cheatsheets"
version = "0.1.0"
description = "Just my cheatsheets of different stuff like Python, git, pandas, Linux etc"
authors = ["RandyRomero <a.ya.miheev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
aio-pika = "^9.0.5"
mypy = "^1.1.1"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
